# sonar

./: CLAUDE.md  Cargo.toml  README.md
examples/: mcp_bench.rs  since_debug.rs
src/: daemon.rs  index.rs  install.rs  lib.rs  main.rs  mcp.rs  parse.rs
src/code/: index.rs  install.rs  mod.rs  parse.rs  walk.rs
tests/: code_test.rs  install_test.rs  parse_test.rs
