[package]
name = "sonar"
version = "0.1.0"
edition = "2021"
description = "Memory-mapped, instant search across your Claude Code conversation history. MCP-native."
license = "MIT"
repository = "https://github.com/Timothyng28/sonar"

[dependencies]
tantivy = "0.26"
notify = "8.2"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
